# rustpad

./: .env  .env.example  .gitignore  ADMIN_PANEL_SUMMARY.md  ADMIN_PANEL_TESTING.md  DEPLOYMENT.md  DEPLOY_NOW.md  DOCKER_DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  README.md  deploy-vps.ps1  deploy-vps.sh  docker-compose.production.yml  docker-compose.traefik.yml  docker-compose.vps.yml  docker-compose.yml
frozen_documents/frozen/8b3ea004-1c88-47f5-96f3-d439b402d1ba/: metadata.json
frozen_documents/users/: michaeldancurtis.json
rustpad-server/: .env  Cargo.toml
rustpad-server/docs/: ai-model-selection.md
rustpad-server/frozen_documents/frozen/michaeldancurtis/: metadata.json
rustpad-server/frozen_documents/users/: michaeldancurtis.json
rustpad-server/src/: ai.rs  artifacts.rs  auth.rs  freeze.rs  lib.rs  main.rs
src/: AdminPanel.tsx  AiPanel.tsx  App.tsx  FileBrowserModal.tsx  Footer.tsx  LoginModal.tsx  Sidebar.tsx
